--- a/RCC_Classification.ipynb
+++ b/RCC_Classification.ipynb
@@ -241,14 +241,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 26,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 927
         },
         "id": "nBQS5xRg9gwD",
-        "outputId": "513c7a8b-1748-4938-bbd6-85794de4fb32"
+        "outputId": "cde80d23-827f-45cf-aa6f-2ffb5011ad5a"
       },
       "outputs": [
         {
@@ -282,16 +282,15 @@
         "plt.xlabel(\"No. of epochs\")\n",
         "plt.ylabel(\"Loss(Categorical Crossentropy)\")\n",
         "plt.title(\"Loss vs Epoch\")\n",
-        "# plt.savefig('E:/save-2/R1_loss.png')\n",
+        "plt.savefig('/content/drive/MyDrive/RCC/R1_loss.png')\n",
         "plt.show()\n",
-        "#plt.savefig('90.98_loss.png')\n",
         "plt.plot(history.history['accuracy'] , label = 'train_acc')\n",
         "plt.plot(history.history['val_accuracy'] , label = 'val_acc')\n",
         "plt.legend()\n",
         "plt.xlabel(\"No. of epochs\")\n",
         "plt.ylabel(\"Accuracy\")\n",
         "plt.title(\"Accuracy vs Epoch \")\n",
-        "# plt.savefig('E:/save-2/R1_accuracy.png')\n",
+        "plt.savefig('/content/drive/MyDrive/RCC/R1_accuracy.png')\n",
         "plt.show()"
       ]
     },
@@ -820,7 +819,7 @@
         "plt.xlabel(\"FPR\")\n",
         "plt.ylabel(\"TPR\")\n",
         "plt.legend()\n",
-        "# plt.savefig('/content/drive/MyDrive/RCC/ROC-Pro-92.48.png',bbox_inches='tight')\n",
+        "plt.savefig('/content/drive/MyDrive/RCC/ROC-Pro-92.48.png',bbox_inches='tight')\n",
         "plt.show()"
       ],
       "metadata": {
@@ -829,9 +828,9 @@
           "height": 563
         },
         "id": "MyCtWhdhlSRT",
-        "outputId": "9024bd06-1482-4550-821b-ca68a2e5da36"
+        "outputId": "6883243e-984a-49cf-85ee-885e0010650e"
       },
-      "execution_count": 25,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -862,7 +861,7 @@
     "colab": {
       "gpuType": "T4",
       "provenance": [],
-      "authorship_tag": "ABX9TyPASVQ+NGwj4FGUbW+XWhc1",
+      "authorship_tag": "ABX9TyNsvI8uejOXx0lotFmqZiuG",
       "include_colab_link": true
     },
     "kernelspec": {
